# figment-json5

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: config.json5  provider_json5.rs
src/: lib.rs
