[package]
name = "figment-json5"
version = "0.1.1"
edition = "2021"
authors = ["Junil Um <powerumc@gmail.com>"]
description = "This crate provides a Figment provider for JSON5 format"
license = "MIT"
keywords = ["figment", "json5"]
categories = ["config"]
repository = "https://github.com/powerumc/figment-json5"
homepage = "https://github.com/powerumc/figment-json5"
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE*",
    "README.md",
]

[dependencies]
figment = { version = "0", features = ["parse-value"] }
serde = { version = "1", features = ["derive", "serde_derive"] }
json5 = "0"

[dev-dependencies]
figment = { version = "0.10", features = ["env", "test"] }